--- a/src/64_orderSheet.xlsm/Sheet2.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet2.sheet.cls
@@ -5,6 +5,7 @@ Private Sub Worksheet_Change(ByVal target As Range)
     If Not IsArray(target.value) Then
         Dim beginTimeColumn, endTimeColumn As Integer
         Dim currentTobacco, nextTobacco As String
+        Dim dateOfSelectedRow As Variant
         
         beginTimeColumn = 7
         endTimeColumn = 8
@@ -25,10 +26,14 @@ Private Sub Worksheet_Change(ByVal target As Range)
             '开始时间列触发批开始语音提醒
             
             currentTobacco = target.Offset(0, 3 - target.Column).value
-            
-            'Debug.Print (currentTobacco)
-            
-            Util.shedule currentTobacco, target.value, 2, 0
+            dateOfSelectedRow = target.Offset(0, 1 - target.Column).value
+   
+            '行的日期为今天或者是空内容时才进行提醒
+            If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
+                Util.shedule currentTobacco, target.value, 2, 0
+            Else
+                Util.showMsg "日期并非今天, 回潮开始时间不会触发语音提醒"
+            End If
         
         End If
         
@@ -39,7 +44,7 @@ Private Sub Worksheet_Change(ByVal target As Range)
             
             currentTobacco = target.Offset(0, 3 - target.Column).value
             nextTobacco = target.Offset(1, 3 - target.Column).value
-            
+
             If nextTobacco = "" Then
                 '提醒写下一批次的烟牌,并重新填写这一批次的结束时间
                 'Debug.Print "空白牌号"
@@ -47,13 +52,17 @@ Private Sub Worksheet_Change(ByVal target As Range)
                 Exit Sub
             End If
             
-            '批结束提醒
-            Util.shedule currentTobacco, target.value, 3, 0
+            dateOfSelectedRow = target.Offset(0, 1 - target.Column).value
             
-            '下一批开始前提醒
-            Util.shedule nextTobacco, target.value, 1, 0
+            '行的日期为今天或者是空内容时才进行提醒
+            If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
+                '批结束提醒
+                Util.shedule currentTobacco, target.value, 3, 0
+                '下一批开始前提醒
+                Util.shedule nextTobacco, target.value, 1, 0
+            Else
+                 Util.showMsg "日期并非今天, 回潮结束时间不会触发语音提醒"
+            End If
         End If
-        
     End If
-    
 End Sub
