--- a/src/64_orderSheet.xlsm/Sheet3.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet3.sheet.cls
@@ -1,4 +1,4 @@
-Private Sub Worksheet_Change(ByVal target As Range)
+Private Sub Worksheet_Change(ByVal target As range)
     Dim timeFormatColumns As Variant
     timeFormatColumns = Array(8, 9)
     
@@ -25,8 +25,8 @@ Private Sub Worksheet_Change(ByVal target As Range)
         If target.Column = beginTimeColumn And Util.IsNum(target.value) Then
             '开始时间列触发批开始语音提醒
             
-            currentTobacco = target.Offset(0, 3 - target.Column).value
-            dateOfSelectedRow = target.Offset(0, 1 - target.Column).value
+            currentTobacco = target.offset(0, 3 - target.Column).value
+            dateOfSelectedRow = target.offset(0, 1 - target.Column).value
             
             'Debug.Print (currentTobacco)
             'Debug.Print dateOfSelectedRow
@@ -49,8 +49,8 @@ Private Sub Worksheet_Change(ByVal target As Range)
             Dim feedLiquidSweepDelay As Integer
             feedLiquidSweepDelay = 0
             
-            currentTobacco = target.Offset(0, 3 - target.Column).value
-            nextTobacco = target.Offset(1, 3 - target.Column).value
+            currentTobacco = target.offset(0, 3 - target.Column).value
+            nextTobacco = target.offset(1, 3 - target.Column).value
             
             If nextTobacco = "" Then
                 '提醒写下一批次的烟牌,并重新填写这一批次的结束时间
@@ -59,7 +59,7 @@ Private Sub Worksheet_Change(ByVal target As Range)
                 Exit Sub
             End If
             
-            dateOfSelectedRow = target.Offset(0, 1 - target.Column).value
+            dateOfSelectedRow = target.offset(0, 1 - target.Column).value
             
             '行的日期为今天或者是空内容时才进行提醒
             If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
