--- a/src/64_orderSheet.xlsm/Sheet4.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet4.sheet.cls
@@ -1,10 +1,13 @@
-Private Sub Worksheet_Change(ByVal target As Range)
+Private Sub Worksheet_Change(ByVal target As range)
     Dim timeFormatColumns As Variant
     timeFormatColumns = Array(8, 9)
     
     If Not IsArray(target.value) Then
     
-        Dim endTimeColumn As Integer
+        Dim currentTobacco, nextTobacco As String
+        Dim dateOfSelectedRow As Variant
+        Dim beginTimeColumn, endTimeColumn As Integer
+        beginTimeColumn = 8
         endTimeColumn = 9
         
         If Util.IsInArray(target.Column, timeFormatColumns) And Util.IsNum(target.value) Then
@@ -20,68 +23,61 @@ Private Sub Worksheet_Change(ByVal target As Range)
         End If
         
         
+        If target.Column = beginTimeColumn And Util.IsNum(target.value) Then
+            '开始时间列触发批开始语音提醒
+            
+            currentTobacco = target.offset(0, 3 - target.Column).value
+            dateOfSelectedRow = target.offset(0, 1 - target.Column).value
+            
+            'Debug.Print (currentTobacco)
+            'Debug.Print dateOfSelectedRow
+            
+            '行的日期为今天或者是空内容时才进行提醒
+            If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
+                Util.shedule currentTobacco, target.value, 8, 0
+            Else
+                Util.showMsg "日期并非今天, 加料开始时间不会触发语音提醒"
+            End If
+            
+        End If
         
         If target.Column = endTimeColumn And Util.IsNum(target.value) Then
            
+            '结束时间
+            '不再自动填写下一批的开始时间
+            Dim serialNum As range
+            Set serialNum = target.offset(0, -7)
             
-            Dim serialNum, nextStartTime, nextTips As Range
-            Dim tipsOfSwitchCutting, tipsOfNow As String
-            Dim tsOfSwitchCutting, tsOfNextReady As Integer
-            Dim tpOfSwitchCutting, tpOfNextReady As Variant
-            Dim currentTobacco, nextTobacco As String
+            Dim addEssenceSweepDelay As Integer
+            addEssenceSweepDelay = 0
             
+            currentTobacco = target.offset(0, 3 - target.Column).value
+            nextTobacco = target.offset(1, 3 - target.Column).value
             
-'            currentTobacco = target.offset(0, 3 - target.Column).value
-'            nextTobacco = target.offset(1, 3 - target.Column).value
-'
-'            Util.shedule currentTobacco, target.value, 3, False
-            
-            Set serialNum = target.Offset(0, -7)
-            Set nextStartTime = target.Offset(1, -1)
-            Set nextTips = target.Offset(1, 2)
-            
-            tipsOfSwitchCutting = "六四切丝换工单，留意叶柜出柜状态"
-            tipsOfNow = "有回掺需通知膨梗中控，HDT工"
-            
-            If serialNum.value = "4" Or serialNum.value = "8" Then
-                tsOfSwitchCutting = 9
-                tsOfNextReady = 24
-            Else:
-                tsOfSwitchCutting = 5
-                tsOfNextReady = 20
+            If nextTobacco = "" Then
+                '提醒写下一批次的烟牌,并重新填写这一批次的结束时间
+                'Debug.Print "空白牌号"
+                Util.speakAsync "请填下一批的牌号, 并重新填写这批烘丝结束时间"
+                Exit Sub
             End If
             
-            nextStartTime.value = target.value + TimeSerial(0, tsOfNextReady, 0)
+            dateOfSelectedRow = target.offset(0, 1 - target.Column).value
             
-            Util.speakLater Now, tipsOfNow
-            Util.showMsgLater Now, tipsOfNow
-            
-            tpOfSwitchCutting = target.value + TimeSerial(0, tsOfSwitchCutting, 0)
-            
-            If Time > tpOfSwitchCutting Then
-                Util.speakLater Now, tipsOfSwitchCutting
-                Util.showMsgLater Now, tipsOfSwitchCutting
-            Else:
-                Util.speakLater tpOfSwitchCutting, tipsOfSwitchCutting
-                Util.showMsgLater tpOfSwitchCutting, tipsOfSwitchCutting
-            End If
-            
-            tpOfNextReady = target.value + TimeSerial(0, tsOfNextReady, 0)
-            'Debug.Print nextTips
-            'Debug.Print nextTips.value
-            If Not IsError(nextTips) Then
-                'Debug.Print Time
-                'Debug.Print tpOfNextReady
-                If Time > tpOfNextReady Then
-                    Util.speakLater Now, nextTips.value
-                    Util.showMsgLater Now, nextTips.value
-                Else:
-                    Util.speakLater tpOfNextReady, nextTips.value
-                    Util.showMsgLater tpOfNextReady, nextTips.value
+            '行的日期为今天或者是空内容时才进行提醒
+            If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
+                '第4批和第8批加香机需要清扫, 延时4分钟上烟
+                If serialNum.value = "4" Or serialNum.value = "8" Then
+                    addEssenceSweepDelay = 4
                 End If
+                
+                '批结束提醒
+                Util.shedule currentTobacco, target.value, 9, 0
+                '下一批开始前提醒
+                Util.shedule nextTobacco, target.value, 7, addEssenceSweepDelay
+            Else
+                 Util.showMsg "日期并非今天, 加料结束时间不会触发语音提醒"
             End If
         End If
-    
     End If
-    
 End Sub
+
