--- a/src/64_orderSheet.xlsm/Sheet4.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet4.sheet.cls
@@ -74,10 +74,32 @@ Private Sub Worksheet_Change(ByVal target As range)
                 Util.shedule currentTobacco, target.value, 9, 0
                 '下一批开始前提醒
                 Util.shedule nextTobacco, target.value, 7, addEssenceSweepDelay
+                '下一批次特殊提醒
+                Util.speakPrecaution nextTobacco, target.value, "O", addEssenceSweepDelay
             Else
                  Util.showMsg "日期并非今天, 加料结束时间不会触发语音提醒"
             End If
         End If
     End If
+End Sub
+
+Public Sub firstBatchTip()
+'    Dim found As range
+'    Dim firstTobaccoName As String
+'    'find today's first row
+'    Set found = Sheets("切烘加香段").range("A:A").Find(Date, , , xlWhole)
+'    If found Is Nothing Then
+'        Util.showMsg "没有找到今天的日期"
+'    Else
+'        'get the tobacco name, run util.speakPrecation & 开始前提醒
+'        firstTobaccoName = found.offset(0, 2).value
+'        'Debug.Print firstTobaccoName
+'        '需要尽快提醒, 所以把delay设为负数
+'        '时间使用now的话会时间转换会溢出
+'        Util.shedule firstTobaccoName, Time, 7, -10
+'        Util.speakPrecaution firstTobaccoName, Time, "O", -15
+'    End If
+    
+    Util.runFirstBatchWarning "切烘加香段", 7, "O"
 End Sub
 
