--- a/src/64_orderSheet.xlsm/ThisWorkbook.sheet.cls
+++ b/src/64_orderSheet.xlsm/ThisWorkbook.sheet.cls
@@ -6,7 +6,7 @@ Private Sub Workbook_Open()
     Application.OnTime TimeValue("12:10:00"), "AutoBackup.AutoBackup"
     Application.OnTime TimeValue("22:10:00"), "AutoBackup.AutoBackup"
     
-    Util.loadDefaultTips
+    'Util.loadDefaultTips
 End Sub
 
 Private Sub Workbook_SheetChange(ByVal Sh As Object, ByVal target As range)
