--- a/src/64_orderSheet.xlsm/Sheet5.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet5.sheet.cls
@@ -1,6 +1,5 @@
 Private Sub Worksheet_Change(ByVal target As range)
-    Dim found As range
-    
+    Dim tobaccoName As String
     '判断发生值变化的是前4行，第1行不为空值，第2到4行为数值
     If Util.IsInArray(target.Row, Array(1, 2, 3, 4)) And target.Column = 3 And isRangeValid(range("C2", "C4")) And range("C1") <> "" Then
         
@@ -19,23 +18,24 @@ Private Sub Worksheet_Change(ByVal target As range)
         Dim settingTemp As Double
         
         '通过牌号拿到设定值
-        Set found = Sheets("设定").range("A:A").Find(range("C1").value, , , xlWhole)
-        range("C5").value = found.offset(0, 4).value
-        range("C6").value = found.offset(0, 5).value
-        range("C7").value = found.offset(0, 6).value
-        range("C8").value = found.offset(0, 7).value
+        tobaccoName = range("C1").value
+        vol = Util.getParam(tobaccoName, "烘丝秤流量")
+        sxWaterAdd = Util.getParam(tobaccoName, "SX水分增加")
+        stdWaterRemove = Util.getParam(tobaccoName, "标准除水量")
+        ck1 = Util.getParam(tobaccoName, "ck1")
 
+        
+        range("C5").value = vol
+        range("C6").value = sxWaterAdd
+        range("C7").value = stdWaterRemove
+        range("C8").value = ck1
+        
         
         '拿到输入值
         inputWaterContent = range("C2").value
         outputWaterContent = range("C3").value
         realTemp = range("C4").value
         
-        '拿到牌号设定值
-        vol = range("C5").value
-        sxWaterAdd = range("C6").value
-        stdWaterRemove = range("C7").value
-        ck1 = range("C8").value
         
         dryWeight = vol * (1 - inputWaterContent * 0.01)
         inputWeight = dryWeight / (1 - (inputWaterContent + sxWaterAdd) * 0.01)
@@ -58,12 +58,12 @@ Private Sub Worksheet_Change(ByVal target As range)
         Dim Ct As Double
         Dim ratio As Double
         
-        Set found = Sheets("设定").range("A:A").Find(range("H1").value, , , xlWhole)
-        range("H3").value = found.offset(0, 8).value
-        range("H4").value = found.offset(0, 9).value
+        tobaccoName = range("H1").value
+        Pt = Util.getParam(tobaccoName, "膨丝回掺量")
+        Gt = Util.getParam(tobaccoName, "梗丝回掺量")
         
-        Pt = range("H3").value
-        Gt = range("H4").value
+        range("H3").value = Pt
+        range("H4").value = Gt
         Ct = range("H2").value
         
         ratio = (Ct + Ct * 0.0291) * 100 / (10000 - Pt - Gt)
