--- a/src/64_orderSheet.xlsm/Sheet2.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet2.sheet.cls
@@ -1,4 +1,4 @@
-Private Sub Worksheet_Change(ByVal target As range)
+Private Sub Worksheet_Change(ByVal target As Range)
     Dim timeFormatColumns As Variant
     timeFormatColumns = Array(7, 8)
     
@@ -29,7 +29,7 @@ Private Sub Worksheet_Change(ByVal target As range)
             dateOfSelectedRow = target.offset(0, 1 - target.Column).value
    
             '行的日期为今天或者是空内容时才进行提醒
-            If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
+            If dateOfSelectedRow = Date Or isEmpty(dateOfSelectedRow) Then
                 Util.sheduleVoiceTips "回潮", currentTobacco, "开始后", target.value, 0
             Else
                 Util.showMsg "日期并非今天, 回潮开始时间不会触发语音提醒"
@@ -55,7 +55,7 @@ Private Sub Worksheet_Change(ByVal target As range)
             dateOfSelectedRow = target.offset(0, 1 - target.Column).value
             
             '行的日期为今天或者是空内容时才进行提醒
-            If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
+            If dateOfSelectedRow = Date Or isEmpty(dateOfSelectedRow) Then
                 '批结束提醒
                 Util.sheduleVoiceTips "回潮", currentTobacco, "结束后", target.value, 0
                 '下一批开始前提醒
