--- a/src/64_orderSheet.xlsm/Sheet5.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet5.sheet.cls
@@ -1,7 +1,7 @@
-Private Sub Worksheet_Change(ByVal target As range)
+Private Sub Worksheet_Change(ByVal target As Range)
     Dim tobaccoName As String
     '判断发生值变化的是前4行，第1行不为空值，第2到4行为数值
-    If Util.IsInArray(target.Row, Array(1, 2, 3, 4)) And target.Column = 3 And isRangeValid(range("C2", "C4")) And range("C1") <> "" Then
+    If Util.IsInArray(target.Row, Array(1, 2, 3, 4)) And target.Column = 3 And isRangeValid(Range("C2", "C4")) And Range("C1") <> "" Then
         
         
         Dim vol As Double
@@ -18,23 +18,23 @@ Private Sub Worksheet_Change(ByVal target As range)
         Dim settingTemp As Double
         
         '通过牌号拿到设定值
-        tobaccoName = range("C1").value
+        tobaccoName = Range("C1").value
         vol = Util.getParam(tobaccoName, "烘丝秤流量")
         sxWaterAdd = Util.getParam(tobaccoName, "SX水分增加")
         stdWaterRemove = Util.getParam(tobaccoName, "标准除水量")
         ck1 = Util.getParam(tobaccoName, "ck1")
 
         
-        range("C5").value = vol
-        range("C6").value = sxWaterAdd
-        range("C7").value = stdWaterRemove
-        range("C8").value = ck1
+        Range("C5").value = vol
+        Range("C6").value = sxWaterAdd
+        Range("C7").value = stdWaterRemove
+        Range("C8").value = ck1
         
         
         '拿到输入值
-        inputWaterContent = range("C2").value
-        outputWaterContent = range("C3").value
-        realTemp = range("C4").value
+        inputWaterContent = Range("C2").value
+        outputWaterContent = Range("C3").value
+        realTemp = Range("C4").value
         
         
         dryWeight = vol * (1 - inputWaterContent * 0.01)
@@ -44,37 +44,38 @@ Private Sub Worksheet_Change(ByVal target As range)
         
         settingTemp = (stdWaterRemove - realWaterRemove) * ck1 + realTemp
         
-        range("C9").value = dryWeight
-        range("C10").value = inputWeight
-        range("C11").value = outputWeight
-        range("C12").value = realWaterRemove
-        range("C13").value = settingTemp
+        Range("C9").value = dryWeight
+        Range("C10").value = inputWeight
+        Range("C11").value = outputWeight
+        Range("C12").value = realWaterRemove
+        Range("C13").value = settingTemp
 
     End If
     
-    If Util.IsInArray(target.Row, Array(1, 2)) And target.Column = 8 And isRangeValid(range("H2")) And range("H1") <> "" Then
-        Dim Pt As Double
-        Dim Gt As Double
-        Dim Ct As Double
-        Dim ratio As Double
+    If Util.IsInArray(target.Row, Array(1, 2)) And target.Column = 8 And isRangeValid(Range("H2")) And Range("H1") <> "" Then
+        Dim Pt, Gt, Ct, CSettingRatio, CDiff, realRatio As Double
         
-        tobaccoName = range("H1").value
+        tobaccoName = Range("H1").value
         Pt = Util.getParam(tobaccoName, "膨丝回掺量")
         Gt = Util.getParam(tobaccoName, "梗丝回掺量")
+        CSettingRatio = Util.getParam(tobaccoName, "残丝回掺比例")
+        CDiff = Util.getParam(tobaccoName, "残丝批间差异系数")
         
-        range("H3").value = Pt
-        range("H4").value = Gt
-        Ct = range("H2").value
+        Range("H3").value = Pt
+        Range("H4").value = Gt
+        Range("H5").value = CDiff
+        Range("H6").value = CSettingRatio
+        Ct = Range("H2").value
         
-        ratio = (Ct + Ct * 0.0291) * 100 / (10000 - Pt - Gt)
+        realRatio = (Ct + Ct * CSettingRatio * CDiff) * 100 / (10000 - Pt - Gt)
         
-        range("H5") = ratio
+        Range("H7") = realRatio
         
     End If
 End Sub
 
-Private Function isRangeValid(ByRef target As range) As Boolean
-    Dim cell As range
+Private Function isRangeValid(ByRef target As Range) As Boolean
+    Dim cell As Range
     For Each cell In target
         If Not Util.IsNum(cell.value) Then
             isRangeValid = False
@@ -83,4 +84,5 @@ Private Function isRangeValid(ByRef target As range) As Boolean
     Next cell
     isRangeValid = True
 End Function
+
 
